add official logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>
             Kumbukumbu ya Mwezi Mmoja
         </h1>
-        <img class="logo" src="images/download.jfif" alt="">
+        <img class="logo" src="images/Logo.png" alt="Suave Tech Official Logo">
         <a class="btn" href="ujumbe.html">
             Soma Ujumbe wa Kumbukumbu
         </a>
