--- a/ujumbe.html
+++ b/ujumbe.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital@0;1&family=Satisfy&display=swap"
         rel="stylesheet">
 </head>
 
@@ -67,6 +67,13 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptas ratione minima, dolores
                 necessitatibus aliquid eius inventore nihil. Magni at assumenda expedita obcaecati itaque.
             </p>
+
+            <div style="margin-bottom: 1rem;">
+                <p class="signature">
+                    Innocent
+                </p>
+                <span>Suave Tech, 2024</span>
+            </div>
         </article>
         <div class="links">
             <a class="btn" href="index.html">
