--- a/final.html
+++ b/final.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kumbukumbu ya Mwezi Mmoja Tangu Kuanzishwa kwa Chaneli</title>
+    <title>
+        Kumbukumbu ya Mwezi Mmoja Tangu Kuanzishwa kwa Chaneli
+    </title>
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,10 +23,10 @@
         </video>
         <div class="links">
             <a class="btn" href="ujumbe.html">
-                prev
+                <img class="icon" src="images/previous.png" alt="Nyuma">
             </a>
             <a class="btn" href="index.html">
-                home
+                <img class="icon" src="images/home.png" alt="Nyumbani">
             </a>
         </div>
     </div>
