--- a/ujumbe.html
+++ b/ujumbe.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kumbukumbu ya Mwezi Mmoja Tangu Kuanzishwa kwa Chaneli</title>
+    <title>
+        Kumbukumbu ya Mwezi Mmoja Tangu Kuanzishwa kwa Chaneli
+    </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,10 +79,10 @@
         </article>
         <div class="links">
             <a class="btn" href="index.html">
-                prev
+                <img class="icon" src="images/previous.png" alt="Nyuma">
             </a>
             <a class="btn" href="final.html">
-                next
+                <img class="icon" src="images/next.png" alt="Mbele">
             </a>
         </div>
     </div>
