--- a/ujumbe.html
+++ b/ujumbe.html
@@ -21,53 +21,51 @@
             Ujumbe wa Kumbukumbu
         </h1>
         <article>
-            <p>
-                Lorem ipsum dolor sit amet consectetur.
+            <p class="text" style="font-weight: bold;">
+                23 Aprili 2024
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ullam, rem blanditiis repellendus
-                facere, id recusandae illo minima aliquam inventore nesciunt similique fuga pariatur molestias at eum.
-                Soluta, maiores unde.
+
+            <p class="text">
+                Lo, wakati unaenda kwa kasi unapoburudika kwa kuchunguza uwezekano usio na kikomo wa teknolojia!
             </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptas ratione minima, dolores
-                necessitatibus aliquid eius inventore nihil. Magni at assumenda expedita obcaecati itaque.
+            <p class="text">
+                🚀 Leo ni siku
+                muhimu kwa
+                jumuiya yetu ya teknolojia tunapoadhimisha kumbukumbu ya mwezi mmoja tangu kuanzishwa kwa chaneli yetu.
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ullam, rem blanditiis repellendus
-                facere, id recusandae illo minima aliquam inventore nesciunt similique fuga pariatur molestias at eum.
-                Soluta, maiores unde.
+            <p class="text">
+                🙏 Ninapenda kutoa shukrani zangu za dhati kwa kila mmoja wenu ambaye amekuwa sehemu ya safari hii.
+                Usaidizi wako,
+                ushiriki
+                wako, na shauku yako imekuwa nguvu inayosukuma ukuaji na mafanikio yetu.
             </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptas ratione minima, dolores
-                necessitatibus aliquid eius inventore nihil. Magni at assumenda expedita obcaecati itaque.
+            <p class="text">
+                🎉 Mwezi uliopita umejaa kujifunza,
+                kushiriki, na kugundua maarifa ya kuvutia katika ulimwengu wa teknolojia, na nisingeweza kufanya hivyo
+                bila wewe!
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ullam, rem blanditiis repellendus
-                facere, id recusandae illo minima aliquam inventore nesciunt similique fuga pariatur molestias at eum.
-                Soluta, maiores unde.
+            <p class="text">
+                Tunaposherehekea hatua hii muhimu, ninakualika ujiunge nami katika kuunda mustakabali wa chaneli yetu.
+                Shiriki kwa
+                kutoa
+                maoni, mapendekezo na mawazo yako kwa maudhui ya siku zijazo - mchango wako ni muhimu sana!
             </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptas ratione minima, dolores
-                necessitatibus aliquid eius inventore nihil. Magni at assumenda expedita obcaecati itaque.
+            <p class="text">
+                Usisahau kushare link ya channel na marafiki zako. Kwa pamoja, acha tuendelee na safari hii ya uchunguzi
+                na
+                ugunduzi!
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ullam, rem blanditiis repellendus
-                facere, id recusandae illo minima aliquam inventore nesciunt similique fuga pariatur molestias at eum.
-                Soluta, maiores unde.
+            <p class="text">
+                Asante kwa mara nyingine tena kwa kuwa sehemu ya jumuiya yetu ya teknolojia na kwa kufanya mwezi
+                uliopita kuwa
+                mwezi
+                wa kukumbukwa.
             </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptas ratione minima, dolores
-                necessitatibus aliquid eius inventore nihil. Magni at assumenda expedita obcaecati itaque.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus ullam, rem blanditiis repellendus
-                facere, id recusandae illo minima aliquam inventore nesciunt similique fuga pariatur molestias at eum.
-                Soluta, maiores unde.
-            </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi voluptas ratione minima, dolores
-                necessitatibus aliquid eius inventore nihil. Magni at assumenda expedita obcaecati itaque.
+            <p class="text">
+                🚀 Kuna miezi mingi zaidi ya uvumbuzi, msukumo, na umaridadi wa teknolojia! Hebu tuendelee kuvuka mipaka
+                na
+                kufungua
+                uwezekano usio na kikomo ambao teknolojia inaweza kutoa.
             </p>
 
             <div style="margin-bottom: 1rem;">
