--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <div class="container text-center">
+    <div class="container text-center" style="width: 40%;">
         <h1>
-            Kumbukumbu ya Mwezi Mmoja
+            Kumbukumbu ya Kuanzishwa kwa Chaneli
         </h1>
         <img class="logo" src="images/Logo.png" alt="Suave Tech Official Logo">
         <a class="btn" href="ujumbe.html">
