--- a/ujumbe.html
+++ b/ujumbe.html
@@ -85,9 +85,9 @@
     </div>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-    <script src="/js/jquery-typewriter.js"></script>
+    <script src="js/jquery-typewriter.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
-    <script src="/js/confetti-fire.js"></script>
+    <script src="js/confetti-fire.js"></script>
     <script type="text/javascript">
 
         $(document).ready(function () {
